fix: overflow in topic detail page

--- a/backoffice-webapp/src/index.css
+++ b/backoffice-webapp/src/index.css
@@ -22,6 +22,12 @@
   font-style: normal;
 }
 
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
